--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@
     padding-bottom: 0;
 }
 .logo{
-    max-width: 60px;
+    max-width: 50px;
     /* max-height: 35px; */
 }
 .top-logo{
@@ -24,6 +24,7 @@
     font-size: 20px;
 }
 .Link{
+    background-color: transparent;
     font-family: 'IBM Plex Mono';
     text-decoration: none;
     transition: transform .4s;
@@ -33,4 +34,29 @@
 }
 .gimme-margin-top{
     margin-top: 15px;
+}
+button .Link{
+    font-family: 'ptSerif';
+}
+button{
+    border-radius: 5px;
+    padding: "5px";
+    color: "black";
+    background-color: #F7C97E;
+    border: none;
+    margin-top:35px;
+    font-family: 'ptSerif';
+    font-size: 18px;
+    width:150px ;
+}
+form button{
+    width:100%;
+    min-height: 50px;
+    font-weight: bold;
+    background-color: black;
+    color:#ffc800;
+}
+button:hover
+{
+    background-color: #ffc800;
 }
