--- a/public/styles.css
+++ b/public/styles.css
@@ -113,3 +113,11 @@ form button:hover
     background-color: #ffc800;
     border: 5px solid black;
 }
+.phone1{
+    color: #F9F9F9;
+    background: transparent;
+}
+.fa-phone {
+    background: transparent;
+    margin-right: 5px;
+}
